Adding pieces to html page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="assets/styles.css" >
 </head>
 <body>
-    <h1>Classic</h1>
+    <header>
+        <h1>Andrew Hur</h1>
+    </header>
+    
+    <main>
+        <section id="topright">
+            <h2>Refactoring</h2>
+            <h3>Accessibility!</h3>
+        </section>
+        <section>
+            <h2>Refactoring</h2>
+            <h3>Accessibility!</h3>
+        </section>
+    </main>
 </body>
+
 </html>
