Adding basic skeleton for the outline

--- a/index.html
+++ b/index.html
@@ -10,16 +10,57 @@
 <body>
     <header>
         <h1>Andrew Hur</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#aboutme">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contactme">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     
     <main>
-        <section id="topright">
-            <h2>Refactoring</h2>
-            <h3>Accessibility!</h3>
+        <section id="aboutme">
+            <ul>
+                <h1>
+                    About Me
+                </h1>
+                <p>This is the box that I will talk about me</p>
+            </ul>
+        
         </section>
-        <section>
-            <h2>Refactoring</h2>
-            <h3>Accessibility!</h3>
+        <section id="work">
+            <ul>
+                <h1>
+                    Work
+                </h1>
+                <p>Probably add images with links to my work</p>
+            </ul>
+        </section>
+        <section id="contactme">
+            <ul>
+                <h1>
+                    Contact Me
+                </h1>
+                <p>Adding form so that people can contact me</p>
+            </ul>
+        </section>
+        <section id="resume">
+            <ul>
+                <h1>
+                    Resume
+                </h1>
+                <p>add a link to my resume</p>
+            </ul>
         </section>
     </main>
 </body>
