--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </ul>
         </nav>
     </header>
-    
+    <div class="box">
+    </div>
     <main>
         <section id="aboutme">
             <ul>
