Final Changes for HTML and CSS

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </nav>
     </header>
     <div class="box">
+        <h1>Welcome Traveler!</h1>
     </div>
     <main>
         <section id="aboutme">
@@ -35,16 +36,36 @@
                 <h1>
                     About Me
                 </h1>
-                <p>This is the box that I will talk about me adding a bunch of other words into the part to see how the lines will format "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                <img class="profilepic" src="/assets/profile picture.jpg" alt="My Profile Picture">
+                <p>Hi! My name is Andrew! I am fairly new to coding, but that will not deter me from doing my best! I have a Bachelor's Degree in Philosophy. My study focus was in logic and argumentative reasoning. Coding takes a very logical mind and I have been preparing my whole life for this.
+                <br>
+                <br>
+                I am very passionate about many things! I have worked in the video game industry as a Quality Assurance Tester, giving me a leg up in testing and understanding expected behavior. I have also been part of corporate back offices and launched products to employees and took care of any issues that would arise. I have worked in most industries and in most positions available. This lets me draw on a pool of experience that is varying in perspective than most people. On my free time you can usually find me writing lore to a fantasy realm, model kit building, playing video games or attempting to satiate my appetite for knowledge!
+                <br>
+                <br>
+                Please take a look around!
+                </p>
             </ul>
-        
         </section>
         <section id="work">
             <ul>
                 <h1>
                     Work
                 </h1>
-                <p>Probably add images with links to my work</p>
+                <div class="container">
+                    <a href="https://github.com/ATHur1104">
+                    <img class="github" src="/assets/GitHub-logo.png" alt="GitHub Logo"><div class="text">See what I'm working on!</div>
+                    </a>
+                </div>
+                <div class="container">
+                <a href="https://athur1104.github.io/01-Accessibility/"><img src="/assets/AccessibilityLogo.png" alt="Accessibility Logo"><div class="text">
+                Example of Accessibiliy</div>
+                </a>
+                </div>
+                <div class="container">
+                <a href="#"><img src="/assets/Coming Soon.png" alt="Coming Soon"><div class="text"> Coming Soon! </div>
+                </a>
+                </div>
             </ul>
         </section>
         <section id="contactme">
@@ -52,7 +73,10 @@
                 <h1>
                     Contact Me
                 </h1>
-                <p>Adding form so that people can contact me</p>
+                <p>
+                Phone:<a href="callto:12243924660">224.392.4660</a>
+                <br>
+                Email:<a href="mailto:athur1104@gmail.com">athur1104@gmail.com</a> </p>
             </ul>
         </section>
         <section id="resume">
@@ -60,7 +84,8 @@
                 <h1>
                     Resume
                 </h1>
-                <p>add a link to my resume</p>
+                <div class="container"><a href="assets/Andrew Hur Resume.docx" download><img src="assets/Document.png" alt="Download Link for Resume"><div class="text">Resume</div></a>
+                </div>
             </ul>
         </section>
     </main>
