updating src files to match the right folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1>
                     About Me
                 </h1>
-                <img class="profilepic" src="/assets/profile picture.jpg" alt="My Profile Picture">
+                <img class="profilepic" src="assets/profile picture.jpg" alt="My Profile Picture">
                 <p>Hi! My name is Andrew! I am fairly new to coding, but that will not deter me from doing my best! I have a Bachelor's Degree in Philosophy. My study focus was in logic and argumentative reasoning. Coding takes a very logical mind and I have been preparing my whole life for this.
                 <br>
                 <br>
@@ -54,16 +54,16 @@
                 </h1>
                 <div class="container">
                     <a href="https://github.com/ATHur1104">
-                    <img class="github" src="/assets/GitHub-logo.png" alt="GitHub Logo"><div class="text">See what I'm working on!</div>
+                    <img class="github" src="assets/GitHub-logo.png" alt="GitHub Logo"><div class="text">See what I'm working on!</div>
                     </a>
                 </div>
                 <div class="container">
-                <a href="https://athur1104.github.io/01-Accessibility/"><img src="/assets/AccessibilityLogo.png" alt="Accessibility Logo"><div class="text">
+                <a href="https://athur1104.github.io/01-Accessibility/"><img src="assets/AccessibilityLogo.png" alt="Accessibility Logo"><div class="text">
                 Example of Accessibiliy</div>
                 </a>
                 </div>
                 <div class="container">
-                <a href="#"><img src="/assets/Coming Soon.png" alt="Coming Soon"><div class="text"> Coming Soon! </div>
+                <a href="#"><img src="assets/Coming Soon.png" alt="Coming Soon"><div class="text"> Coming Soon! </div>
                 </a>
                 </div>
             </ul>
